RESOLVED FIXED124194
Remote Layer Tree: Assertions during layer flushing after replaceSublayer()
https://bugs.webkit.org/show_bug.cgi?id=124194
Summary Remote Layer Tree: Assertions during layer flushing after replaceSublayer()
Tim Horton
Reported 2013-11-12 00:27:17 PST
Two glaring issues with PlatformCALayerRemote::replaceSublayer: 1) It double-removes the old child. 2) It it never sets the superlayer backpointer on the new child.
Attachments
patch (1.59 KB, patch)
2013-11-12 00:29 PST, Tim Horton
andersca: review+
Tim Horton
Comment 1 2013-11-12 00:29:23 PST
Tim Horton
Comment 2 2013-11-12 10:53:29 PST
Note You need to log in before you can comment on or make changes to this bug.