Remote Layer Tree: Assertions during layer flushing after replaceSublayer() https://bugs.webkit.org/show_bug.cgi?id=124194

Reviewed by Anders Carlsson.

* WebProcess/WebPage/mac/PlatformCALayerRemote.cpp:
(PlatformCALayerRemote::replaceSublayer):
Only remove the old layer from the children array once (via removeFromSuperlayer).
Update the superlayer backpointer on the new layer.


Canonical link: https://commits.webkit.org/142410@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159124 268f45cc-cd09-0410-ab3c-d52691b4dbfc